Created new file for RAG Agent

--- a/scratch_1.ipynb
+++ b/scratch_1.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "id": "b7d3f547",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
     "import os\n",
     "\n",
     "os.environ[\"LANGSMITH_TRACING\"] = \"false\"\n",
-    "os.environ[\"LANGSMITH_API_KEY\"] = \"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\"\n",
+    "os.environ[\"LANGSMITH_API_KEY\"] = \"\"\n",
     "os.environ[\"LANGSMITH_ENDPOINT\"] = \"https://api.smith.langchain.com\"\n"
    ]
   },
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "id": "1fc4be9d",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
     "import os\n",
     "from langchain.chat_models import init_chat_model\n",
     "\n",
-    "os.environ[\"OPENAI_API_KEY\"] = \"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\"\n",
+    "os.environ[\"OPENAI_API_KEY\"] = \"\"\n",
     "model = init_chat_model(\"gpt-4.1\")"
    ]
   },
